# Watch-Amazon-Price

./: .gitignore  PLAN.md  README.md  SETUP.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: price-check.yml  test-email.yml
data/: price_history.json  products.json
src/: __init__.py  config.py  email_sender.py  logger.py  main.py  price_tracker.py  scraper.py  timezone_utils.py
