[project]
name = "watch-amazon-price"
version = "0.1.0"
description = "Daily Amazon AU price tracker with GitHub Actions"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
]
